# tree-sitter-pymanifest

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.rst  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: build.yml  test.yml
bindings/c/: tree-sitter-pymanifest.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_pymanifest/: __init__.py  _core.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterPyManifest/: pymanifest.h
bindings/swift/TreeSitterPyManifestTests/: TreeSitterPyManifestTests.swift
src/: grammar.json  node-types.json  parser.c
src/tree_sitter_pymanifest/: __init__.py  _core.py
test/: test_package.py
test/corpus/: pymanifest.txt
test/highlight/: MANIFEST.in
tree_sitter_pymanifest/: __init__.py
tree_sitter_pymanifest/queries/: highlights.scm
