[package]
name = "tree-sitter-pymanifest"
description = "pymanifest grammar for the tree-sitter parsing library"
version = "0.3.0"
keywords = ["incremental", "parsing", "pymanifest"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter-grammars/tree-sitter-pymanifest"
edition = "2021"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "src/parser.c",
  "src/grammar.json",
  "src/node-types.json",
  "src/tree_sitter/*",
  "src/tree_sitter_pymanifest/queries/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "~0.20.10"

[build-dependencies]
cc = "1.0"
