[build-system]
requires = ["setuptools>=62.4.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-pymanifest"
description = "PyPA manifest grammar for tree-sitter"
version = "0.5.1"
keywords = ["incremental", "parsing", "tree-sitter", "pymanifest"]
classifiers = [
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
requires-python = ">=3.10"
license.text = "MIT"
readme = "README.rst"

[project.urls]
Homepage = "https://github.com/tree-sitter-grammars/tree-sitter-pymanifest"
Funding = "https://github.com/sponsors/ObserverOfTime"

[[project.authors]]
name = "ObserverOfTime"
email = "chronobserver@disroot.org"

[project.optional-dependencies]
core = ["tree-sitter~=0.24"]

[tool.cibuildwheel]
build = "cp310-*"
build-frontend = "build"
